--- a/config.json
+++ b/config.json
@@ -73,7 +73,7 @@
     "issues": "https://github.com/OfficialMagic8/Languages/issues"
   },
   "donatelink": "https://donatebot.io/checkout/610816275580583936",
-  "uptime": "https://uptime.magic8.xyz/",
+  "uptime": "https://uptime.magic8.xyz",
   "docs": {
     "ads": "https://docs.magic8.xyz/info/ads",
     "main": "https://docs.magic8.xyz/",
