--- a/config.json
+++ b/config.json
@@ -69,8 +69,8 @@
   "botinvite": "https://discord.com/oauth2/authorize?client_id=484148705507934208&scope=bot&permissions=1879436400",
   "github": {
     "org": "https://github.com/OfficialMagic8",
-    "languages": "https://github.com/OfficialMagic8/Languages",
-    "issues": "https://github.com/OfficialMagic8/Languages/issues"
+    "languages": "https://github.com/OfficialMagic8/languages",
+    "issues": "https://github.com/OfficialMagic8/languages/issues"
   },
   "donatelink": "https://donatebot.io/checkout/610816275580583936",
   "uptime": "https://uptime.magic8.xyz",
@@ -78,6 +78,7 @@
     "ads": "https://docs.magic8.xyz/info/ads",
     "main": "https://docs.magic8.xyz/",
     "terms": "https://docs.magic8.xyz/info/terms",
-    "triplepackage": "https://docs.magic8.xyz/info/premium#triple-package-usd-8-99-one-time-forever"
+    "triplepackage": "https://docs.magic8.xyz/info/premium#triple-package-usd-8-99-one-time-forever",
+    "progress": "https://docs.magic8.xyz/info/to-do-list"
   }
 }
